--- a/styles/sass/layout/_nav.scss
+++ b/styles/sass/layout/_nav.scss
@@ -6,7 +6,7 @@
   align-items: center;
   padding: $space-sml $space-lrg $space-sml $space-lrg;
   position: fixed;
-  z-index: 1;
+  z-index: 2;
 
   & .logo {
     width: 4.5rem;
